--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -4228,12 +4228,12 @@ input[type="button"].btn-block {
   display: block;
   padding: 10px;
   color:black;
+  font-size: small;
 }
 
 .nav-link:hover, .nav-link:focus {
   text-decoration: underline;
 color:black;
-font-size:small;
 }
 
 .nav-link.disabled {
@@ -5253,12 +5253,10 @@ a.badge-dark:focus, a.badge-dark.focus {
 }
 
 .jumbotron {
-  box-sizing: border-box;
   padding: 2rem 1rem;
   margin-bottom: 2rem;
-  background-color: #acafb3;
+  background-color: #e9ecef;
   border-radius: 0.3rem;
-  height:fit-content;
 }
 
 @media (min-width: 576px) {
@@ -10200,14 +10198,14 @@ a.text-dark:hover, a.text-dark:focus {
   abbr[title]::after {
     content: " (" attr(title) ")";
   }
-  pre {
+  /* pre {
     white-space: pre-wrap !important;
   }
   pre,
   blockquote {
     border: 1px solid #adb5bd;
     page-break-inside: avoid;
-  }
+  } */
   thead {
     display: table-header-group;
   }
